--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="grid.css">
-	<meta name="description" content="Nothing to see here.">
+	<meta name="description" content="The home page.">
+<meta property="og:BSSFGHT.com" content="BSSFGHT.com">
+<meta property="og:type" content="website">
+<meta property="og:image" content="/images/banner.png">
+<meta property="og:url" content="index.html">
+<meta name="twitter:card" content="summary_large_image">
+	
 </head>
 <body>
 	<cell span=1-2><small><a href="#">HOME</a></small></cell>
