--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="The home page.">
 <meta property="og:BSSFGHT.com" content="BSSFGHT.com">
 <meta property="og:type" content="website">
-<meta property="og:image" content="/images/banner.png">
+<meta property="og:image" content="https://mattcolewilson.github.io/test/images/banner.png">
 <meta property="og:url" content="index.html">
 <meta name="twitter:card" content="summary_large_image">
 	
